--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compileOnly 'org.projectlombok:lombok'
-    runtimeonly 'mysql:mysql-connector-java'
+    compile 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     compileOnly 'org.projectlombok:lombok'
@@ -36,4 +36,6 @@ dependencies {
     testCompileOnly 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testCompile group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
+    compile group: 'cn.hutool', name: 'hutool-all', version: '4.6.5'
+    compile group: 'ognl', name: 'ognl', version: '3.2.11'
 }
