--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,5 +33,13 @@ spring:
 ---
 benny:
   generator:
+    # 数据库名字
     schema: leetcode
-
+    package: cn.okjava.bennycodegenerator.generator.bean
+    outputdir: E:\tdd
+    author: benny
+    version: 1.1
+    # 表前缀
+    tableprefix: t_
+    # 实体后缀
+    entitysuffix: entity
