增加数据库数据类型

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,6 +37,7 @@ benny:
     schema: baby-story
     package: cn.okbbb.baby.modules
     outputdir: E:\tdd
+    module: user
     author: kaiyan
     version: 1.1
     # 表前缀
